--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -9,12 +9,14 @@
       </div>
     </div>
     <div class="category_data_right">
-      <%= link_to "カテゴリ編集", edit_category_path(@category), class: "edit_category_btn" %>
+      <%= link_to edit_category_path(@category), class: "edit_category_btn" do %>
+        カテゴリ編集<i class="fa-solid fa-pen-to-square fa-lg"></i>
+      <% end %>
     </div>
   </div>
   <div class="main_top_user_data">
     <div class="current_user_name">
-      <%= current_user.name %>
+      <%= current_user.name %><i class="fa-solid fa-angle-down"></i>
     </div>
     <%= image_tag "no_image.png", class: "current_user_image" %>
     <div class="user_operation">
