--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="main_top_user_data">
     <div class="current_user_name">
-      <%= current_user.name %>
+      <%= current_user.name %><i class="fa-solid fa-angle-down"></i>
     </div>
     <%= image_tag "no_image.png", class: "current_user_image" %>
     <div class="user_operation">
