--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -36,7 +36,7 @@
             <p class="character_list_title">Member</p>
           </div>
           <div class="character_list_top_right">
-            <%= f.submit "カテゴリ登録", class: "new_category_btn" %>
+            <%= f.submit "カテゴリ登録", class: "category_submit_btn click_btn" %>
           </div>
         </div>
         <div class="character_checkboxies">
