--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -53,8 +53,8 @@
             </div>
             <div class="character_name"><%= character.name %></div>
             <div class="detail">
-              <%= link_to("詳細編集", edit_character_path(character), class: "edit_character_btn character_btn") %><br>
-              <%= link_to("データ削除", character_path(character), method: :delete, data: {confirm: "「#{character.name}」のデータを削除してもよろしいですか？"}, class: "delete_character_btn character_btn") %>
+              <%= link_to("詳細編集", edit_character_path(character), class: "edit_character_btn character_btn click_btn") %><br>
+              <%= link_to("データ削除", character_path(character), method: :delete, data: {confirm: "「#{character.name}」のデータを削除してもよろしいですか？"}, class: "delete_character_btn character_btn click_btn") %>
             </div>
           </div>
           <div class="character_topic">
