--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -78,15 +78,6 @@ svg {
   background: url("/images/side_bar_back.png") bottom no-repeat;
 }
 
-#category_all {
-  width: 100%;
-  padding: 7px 0 7px 33px;
-  font-size: 14px;
-  background-color: #f5f5f5;
-  color: #770099;
-  display: block;
-}
-
 .category_btn {
   width: 100%;
   padding: 7px 0 7px 35px;
@@ -96,8 +87,21 @@ svg {
   display: block;
 }
 
-#new_category_btn {
+.category_btn:hover {
   background-color: #600077;
+}
+
+.category_all {
+  padding: 7px 0 7px 33px;
+}
+
+.new_category_btn {
+  background-color: #8f21ad;
+}
+
+#active_category {
+  background-color: #f5f5f5;
+  color: #770099;
 }
 
 .footer {
@@ -587,7 +591,7 @@ svg {
   background-color: #600077;
 } 
 
-#category_list_open_btn {
+.category_list_open_btn {
   margin-top: 10px;
   padding: 3px 12px;
   font-size: 12px;
@@ -762,18 +766,18 @@ svg {
   position: relative;
 }
 
-/* カテゴリ編集ページ */
+/* カテゴリ登録ページ */
 
 .category_input {
   border: none;
   background-color: #600077;
-  border-bottom: 1px solid #a62ec7;
+  border-bottom: 1px solid #fff;
   color: #fff;
   width: 500px;
 }
 
 .category_input::placeholder {
-  color: #999;
+  color: #cd9bda;
 }
 
 .edit_category_name {
@@ -806,9 +810,9 @@ svg {
   color:#770099;
 }
 
-.new_category_btn {
+.category_submit_btn {
   padding: 5px 13px;
-  font-size: 18px;
+  font-size: 16px;
   background-color: #fff;
   color: #770099;
   border: 1px solid #770099;
@@ -864,4 +868,20 @@ svg {
   border: 1px solid #770099;
   border-radius: 20px;
   display: inline-block;
+}
+
+/* ボタン */
+
+.click_btn {
+  cursor: pointer;
+}
+
+.click_btn:hover {
+  background-color: #770099;
+  color: #fff;
+}
+
+.clicked {
+  background-color: #770099;
+  color: #fff;
 }
