--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -36,7 +36,7 @@
         <div class="edit_profile_form_left">
           <%= render "shared/error_messages", model: f.object %>
           <div class='character_image_field'>
-            <%= image_tag "no_image.png", id: "selected_character_image" %>
+            <%= image_tag "no_image.png", class: "selected_character_image", onClick:"document.getElementById('edit_character_image').click()" %>
             <%= f.file_field :image, id:"edit_character_image" %>
           </div>
           <div class='character_name_field'>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="edit_profile_form_right">
-          <div class='character_category_field'>
+          <div class='character_category_field character_field'>
             <p>Category</p>
             <div class="affiliation_category">
             </div>
@@ -65,12 +65,12 @@
               <% end %>
             </div>
           </div>
-          <div class='character_sns_field'>
+          <div class='character_sns_field character_field'>
             <p>SNS / URL</p>
             <p>■　■　■</p>
             <%= f.url_field :url, class: "edit_character_sns" %>
           </div>
-          <div class='character_description_field'>
+          <div class='character_description_field character_field'>
             <p>Description</p>
             <%= f.text_area :describe, class: "edit_character_description" %>
           </div>
