--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -315,6 +315,7 @@ svg {
   width: 95px;
   border-radius: 50%;
   border: 1px solid #f8e8ff;
+  object-fit: cover;
 }
 
 .character_name {
@@ -344,7 +345,7 @@ svg {
 }
 
 .topic_type_future {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   color: #770099;
   position: absolute;
@@ -412,7 +413,7 @@ svg {
 }
 
 .topic_type_past {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   color: #770099;
   position: absolute;
@@ -496,11 +497,20 @@ svg {
   top: 22px;
 }
 
-#selected_character_image {
+.character_image_label {
+  display: inline-block;
+}
+
+.selected_character_image {
   width: 145px;
   height: 145px;
   border-radius: 50%;
   border: 1px solid #f8e8ff;
+  object-fit: cover;
+}
+
+.selected_character_image:hover {
+  opacity: 0.7;
 }
 
 #edit_character_image {
@@ -589,7 +599,11 @@ svg {
 
 .selected_category:hover {
   background-color: #600077;
-} 
+}
+
+.character_field {
+  font-size: 14px;
+}
 
 .category_list_open_btn {
   margin-top: 10px;
@@ -609,7 +623,7 @@ svg {
 }
 
 .edit_character_sns {
-  margin-top: 20px;
+  margin-top: 14px;
   padding: 5px;
   width: 100%;
   border: none;
@@ -624,7 +638,7 @@ svg {
 .edit_character_description {
   margin-top: 10px;
   width: 100%;
-  height: 230px;
+  height: 228px;
   padding: 5px;
   border: none;
   background-color: #f5f5f5;
@@ -654,7 +668,7 @@ svg {
 
 .edit_character_topic_type {
   position: absolute;
-  font-size: 14px;
+  font-size: 16px;
   top: -28px;
   right: 8px;
 }
