--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     </div>
     <h2 class="user_page_title">新規アカウント</h2>
     <div class="signin_field">
-      <%= form_with model: resource, as: resource_name, url: session_path(resource_name), class: "login_form", local: true do |f|%>
+      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
         <%= f.text_field :name, autofocus: true, class: "login_input", placeholder: "Name" %>
         <%= f.email_field :email, class: "login_input", placeholder: "Email" %>
         <%= f.password_field :password, autocomplete: "off", class: "login_input", placeholder: "Password" %>
