フィードバックフォームリンクの追加

--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -28,7 +28,9 @@
   </div>
 
   <div class="footer">
-    <%= link_to "フィードバックを送信", "#", class: "feedback_link" %>
+    <%= link_to "https://docs.google.com/forms/d/e/1FAIpQLSfIDgp729aN46vSjLe96s_iswtG5zf7_03AtfwCIfvY3lMvZA/viewform", class: "feedback_link" do %>
+      <i class="fa-solid fa-lightbulb"></i>フィードバックを送信
+    <% end %>
     <div class="copy_right">
       ©YM Works 2022
     </div>
