--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -20,6 +20,10 @@ svg {
   margin: 0 0 0 10px;
 }
 
+.fa-lightbulb {
+  margin-right: 5px;
+}
+
 
 /* ページ */
 
@@ -115,11 +119,11 @@ svg {
 .feedback_link {
   color: #fff;
   font-size: 14px;
-  margin-left: 20px;
+  margin-left: 17px;
 }
 
 .copy_right {
-  margin-left: 40px;
+  margin-left: 33px;
   font-size: 10px;
 }
 
