--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -21,7 +21,7 @@
 
 <div class="main_top_sub">
   <div class="main_top_sub_left">
-    <%= link_to "入力ヘルプ", "#", class: "sort_btn" %>
+    <%= link_to "入力ヘルプ", "#", class: "sort_btn click_btn" %>
   </div>
   <div class="main_top_sub_right">
   </div>
