ビューの編集

--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -83,8 +83,8 @@
                 <% end %>
               <% end %>
               <%# <div class="topic_btns"> %>
-                <a class="index_new_topic_btn topic_btn" data-character_id="<%= character.id %>" disabled="disabled"><%= image_tag "/images/add_btn.png", class: "topic_btn_image" %></a>
-                <a class="index_delete_topic_btn topic_btn" data-character_id="<%= character.id %>" disabled="disabled"><%= image_tag "/images/delete_btn.png", class: "topic_btn_image" %></a>
+                <a class="index_new_topic_btn topic_btn" data-character_id="<%= character.id %>" disabled="disabled"><i class="fa-solid fa-plus topic-plus-icon"></i></a>
+                <a class="index_delete_topic_btn topic_btn" data-character_id="<%= character.id %>" disabled="disabled"><i class="fa-regular fa-trash-can"></i></a>
               <%# </div> %>
             </div>
           </div>
