--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -25,7 +25,7 @@
       </div>
     <% end %>
     <%= link_to new_category_path, class: "category_btn new_category_btn", id: "#{ "active_category" if current_page?(new_category_path) }" do %>
-      <i class="fa-solid fa-plus fa-lg"></i>カテゴリ追加
+      <i class="fa-solid fa-plus category-plus-icon fa-lg"></i>カテゴリ追加
     <% end %>
   </div>
 
