--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -21,8 +21,16 @@
 
 <div class="main_top_sub">
   <div class="main_top_sub_left">
-    <%= link_to "会話日付順", root_path, class: "sort_btn click_btn #{'active' unless params[:sort]}" %>
-    <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "sort_btn click_btn #{'active' if params[:sort] == "updated_at"}" %>
+    <% unless params[:sort] %>
+      <div class="sort_btn active">会話日付順</div>
+    <% else %>
+      <%= link_to "会話日付順", root_path, class: "sort_btn click_btn" %>
+    <% end %>
+    <% if params[:sort] == "updated_at" %>
+      <div class="sort_btn active">入力更新順</div>
+    <% else %>
+      <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "sort_btn click_btn" %>
+    <% end %>
   </div>
   <div class="main_top_sub_right">
     <div class="update_time">
