ビューの微修正

--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @category, local: true do |f| %>
   <div class="main_top">
-    <div class="main_top_data">
+    <div class="main_top_data category_edit_top_data">
       <div class="top_title">
         <%= f.text_field :name, class: "category_input edit_category_name", placeholder: "カテゴリ名 ※" %>
       </div>
