--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -149,7 +149,7 @@ svg {
 
 .main_top_data {
   margin-top: 15px;
-  width: 680px;
+  width: 690px;
   height: 60px;
   background-color: #600077;
   border-radius: 3px;
@@ -281,12 +281,13 @@ svg {
 }
 
 .characters {
+  padding-bottom: 15px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .character {
-  width: 510px;
+  width: 530px;
   height: 170px;
   border: 1px solid #770099;
   background-color: #fff;
@@ -306,7 +307,7 @@ svg {
 }
 
 .character_info {
-  width: 155px;
+  width: 145px;
   padding-top: 22px;
   text-align: center;
   overflow: hidden;
@@ -316,7 +317,7 @@ svg {
 .character_info::after {
   content: "";
   border-right: 1px solid #770099;
-  height: 125px;
+  height: calc(100% - 43px);
   position: absolute;
   right: 0;
   top: 22px;
@@ -336,7 +337,7 @@ svg {
 }
 
 .character_topic {
-  width: 380px;
+  width: 385px;
   height: calc(100% - 2px);
 }
 
@@ -350,7 +351,7 @@ svg {
 .future_topic::after {
   content: "";
   border: .5px dashed #770099;
-  width: 310px;
+  width: 333px;
   position: absolute;
   bottom: -1px;
   left: 18px;
@@ -378,7 +379,7 @@ svg {
 }
 
 .character_btn {
-  padding: 5px 10px;
+  padding: 5px 12px;
   font-size: 13px;
   background-color: #fff;
   color: #770099;
@@ -412,7 +413,8 @@ svg {
   width: 100%;
   height: 100%;
   padding: 3px 5px;
-  font-size: 12px;
+  font-size: 13px;
+  line-height: 18px;
   border: none;
   background-color: #f5f5f5;
   color: #000;
@@ -422,6 +424,7 @@ svg {
 .topic_input:disabled {
   background-color: #fff;
   border: none;
+  overflow: hidden;
 }
 
 .topic_type_past {
@@ -486,9 +489,15 @@ svg {
 
 .edit_category_btn {
   font-size: 14px;
-  color: #fff;
+  padding: 10px;
+  border-radius: 3px;
+  color: #cd9bda;
 }
 
+.edit_category_btn:hover {
+  background-color: #520067;
+  color: #fff;
+}
 
 /* 新規データ登録ページ */
 
@@ -498,7 +507,7 @@ svg {
 }
 
 .edit_profile_form {
-  width: 665px;
+  width: 675px;
   height: 540px;
   border: 1px solid #770099;
   background-color: #fff;
@@ -575,8 +584,8 @@ svg {
 
 .character_submit_btn {
   margin-top: 200px;
-  padding: 5px 13px;
-  font-size: 18px;
+  padding: 5px 18px;
+  font-size: 17px;
   background-color: #fff;
   color: #770099;
   border: 1px solid #770099;
@@ -602,7 +611,7 @@ svg {
 .character_sns_field::after {
   content: "";
   border: .5px dashed #770099;
-  width: 390px;
+  width: 100%;
   position: absolute;
   bottom: -1px;
   left: 0;
@@ -674,7 +683,7 @@ svg {
 }
 
 .new_character_topic_form {
-  width: 355px;
+  width: 385px;
   height: 540px;
   margin-left: 15px;
   padding: 15px 15px;
@@ -707,7 +716,7 @@ svg {
 .edit_character_future_topic::after {
   content: "";
   border: .5px solid #770099;
-  width: 310px;
+  width: calc(100% - 14px);
   position: absolute;
   bottom: -1px;
   left: 5px;
@@ -769,7 +778,7 @@ svg {
 /* 詳細データ編集ページ */
 
 .edit_character_topic_form {
-  width: 355px;
+  width: 385px;
   max-height: 100%;
   margin-left: 15px;
   padding: 15px 15px;
@@ -784,7 +793,7 @@ svg {
 }
 
 .character_delete_btn {
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 #new_topic_btn {
@@ -833,10 +842,10 @@ svg {
 
 .category_input {
   border: none;
-  background-color: #600077;
+  background-color: #520067;
   border-bottom: 1px solid #fff;
   color: #fff;
-  width: 500px;
+  width: 520px;
 }
 
 .category_input::placeholder {
@@ -853,7 +862,7 @@ svg {
 }
 
 .character_list {
-  width: 680px;
+  width: 690px;
   height: 100%;
   border: 1px solid #770099;
   border-radius: 3px;
@@ -874,7 +883,7 @@ svg {
 }
 
 .category_submit_btn {
-  padding: 5px 13px;
+  padding: 5px 18px;
   font-size: 16px;
   background-color: #fff;
   color: #770099;
@@ -922,9 +931,13 @@ svg {
 
 /* カテゴリ編集ページ */
 
+.category_edit_top_data {
+  background-color: #520067;
+}
+
 .category_operation_btn {
-  padding: 5px 13px;
-  margin-right: 10px;
+  padding: 5px 18px;
+  margin-left: 5px;
   font-size: 16px;
   background-color: #fff;
   color: #770099;
