--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -35,10 +35,12 @@
       <div class="edit_profile_form">
         <div class="edit_profile_form_left">
           <%= render "shared/error_messages", model: f.object %>
-          <div class='character_image_field'>
-            <%= image_tag "no_image.png", class: "selected_character_image", onClick:"document.getElementById('edit_character_image').click()" %>
+          <div class="character_image_field">
+            <div class='selected_character_image_wrapper', onClick="document.getElementById('edit_character_image').click()">
+              <%= image_tag "no_image.png", class: "selected_character_image" %>
+            </div>
             <%= f.file_field :image, id:"edit_character_image" %>
-            <div class="camera_btn" onClick="document.getElementById('edit_character_image').click()">
+            <div class="character_camera_btn" onClick="document.getElementById('edit_character_image').click()">
               <i class="fa-solid fa-camera"></i>
             </div>
           </div>
