--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -190,6 +190,7 @@ svg {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  object-fit: cover;
   border: 1px solid #f8e8ff;
   background-color: #fff;
 }
@@ -534,27 +535,50 @@ svg {
 }
 
 .character_image_field {
+  margin: 0 auto;
+  width: 145px;
+  height: 145px;
   position: relative;
 }
 
-.selected_character_image {
+.selected_character_image_wrapper {
   width: 145px;
   height: 145px;
-  border-radius: 50%;
   border: 1px solid #f8e8ff;
+  border-radius: 50%;
+  position: relative;
   cursor: pointer;
-  object-fit: cover;
 }
 
-.selected_character_image:hover {
-  opacity: 0.7;
+.selected_character_image_wrapper::after {
+  display: none;
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+.selected_character_image_wrapper:hover::after {
+  display: block;
+}
+
+.selected_character_image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 #edit_character_image {
   display: none;
 }
 
-.camera_btn {
+.character_camera_btn {
   width: 34px;
   height: 34px;
   padding: 1px 0 0 7px;
@@ -565,12 +589,25 @@ svg {
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
-  bottom: 12px;
-  right: 41px;
+  bottom: 4px;
+  right: 4px;
 }
 
-.camera_btn:hover {
-  color: #cd9bda;
+.character_camera_btn:after {
+  display: none;
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+.character_camera_btn:hover::after {
+  display: block;
 }
 
 .character_name_field {
