--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -12,7 +12,11 @@
       <div class="current_user_name">
       <%= current_user.name %><i class="fa-solid fa-angle-down"></i>
       </div>
-      <%= image_tag "no_image.png", class: "current_user_image" %>
+      <% if current_user.image.attached? %>
+        <%= image_tag current_user.image, class: "current_user_image" %>
+      <% else %>
+        <%= image_tag "no_image.png", class: "current_user_image" %>
+      <% end %>
       <div class="user_operation">
         <%= link_to("ログアウト", destroy_user_session_path, method: :delete, class: "user_operation_btn user_logout_btn") %>
         <%= link_to("ユーザー情報編集", edit_user_path(current_user), class: "user_operation_btn user_edit_btn") %>
