--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -164,15 +164,87 @@
 
 .user_edit_field_left {
   width: 240px;
+  position: relative;
 }
 
-.edit_current_user_image {
+.user_image_field {
+  margin: 0 auto;
   width: 145px;
   height: 145px;
-  margin: 0 auto;
-  background-color: #fff;
+  position: relative;
+}
+
+.selected_user_image_wrapper {
+  width: 145px;
+  height: 145px;
   border-radius: 50%;
   border: 1px solid #770099;
+  cursor: pointer;
+  position: relative;
+}
+
+.selected_user_image_wrapper::after {
+  display: none;
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+.selected_user_image_wrapper:hover::after {
+  display: block;
+}
+
+.selected_user_image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#edit_user_image {
+  display: none;
+}
+
+.user_camera_btn {
+  width: 34px;
+  height: 34px;
+  padding: 1px 0 0 7px;
+  font-size: 18px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+}
+
+.user_camera_btn::after {
+  display: none;
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+.user_camera_btn:hover::after {
+  display: block;
+}
+
+.user_camera_btn:hover {
+  color: #cd9bda;
 }
 
 .user_edit_field_right {
