--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -43,7 +43,7 @@
             <div class='selected_character_image_wrapper', onClick="document.getElementById('edit_character_image').click()">
               <%= image_tag "no_image.png", class: "selected_character_image" %>
             </div>
-            <%= f.file_field :image, id:"edit_character_image" %>
+            <%= f.file_field :image, id:"edit_character_image", accept:"image/jpeg, image/png" %>
             <div class="character_camera_btn" onClick="document.getElementById('edit_character_image').click()">
               <i class="fa-solid fa-camera"></i>
             </div>
