自動保存時間表示

--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -37,9 +37,7 @@
     <% end %>
   </div>
   <div class="main_top_sub_right">
-    <div class="update_time">
-      自動更新
-    </div>
+    <div id="update_time"></div>
   </div>
 </div>
 
