--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -44,9 +44,7 @@
     <% end %>
   </div>
   <div class="main_top_sub_right">
-    <div class="update_time">
-      自動更新
-    </div>
+    <div id="update_time"></div>
   </div>
 </div>
 
