--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -28,6 +28,7 @@
     <%= link_to "入力ヘルプ", "#", class: "sort_btn click_btn" %>
   </div>
   <div class="main_top_sub_right">
+    <div id="update_time"></div>
   </div>
 </div>
 
