--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -2,7 +2,7 @@
   <div class="main_top">
     <div class="main_top_data category_edit_top_data">
       <div class="top_title">
-        <%= f.text_field :name, class: "category_input edit_category_name", placeholder: "カテゴリ名 ※" %>
+        <%= f.text_field :name, class: "category_input edit_category_name", placeholder: "カテゴリ名 ※", autofocus: true %>
       </div>
       <div class="top_subtitle">
         <%= f.text_field :describe, class: "category_input edit_category_description", placeholder: "説明" %>
