--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -37,7 +37,7 @@ svg {
 
 .wrapper {
   display: flex;
-
+  overflow: hidden;
 }
 .main_view {
   width: calc(100vw - 300px);
@@ -155,6 +155,7 @@ svg {
   border-radius: 3px;
   color: #fff;
   padding: 6px 20px;
+  flex-shrink: 0;
 }
 
 .top_title {
@@ -171,6 +172,7 @@ svg {
   height: 60px;
   padding: 10px;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   position: relative;
   cursor: pointer;
@@ -273,7 +275,8 @@ svg {
   padding: 30px 0;
   height: calc(100vh - 131px);
   background-color: #f5f5f5;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .main_contents_wrapper {
