--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "editpage-delete-topic", "editpage-new-topic", "update-topic", "select-category", "character-view-selected-image", "open-operation-btn" %>
+<%= javascript_pack_tag "edit-sns", "editpage-delete-topic", "editpage-new-topic", "update-topic", "select-category", "character-view-selected-image", "open-operation-btn" %>
 
 <div class="wrapper">
   <div class="side_bar">
